--- a/week2/index.html
+++ b/week2/index.html
@@ -5,6 +5,7 @@
         <meta name="viewport" content="'width=device-width, initial-scale=1.0">
         <title>Responsive exampple></title>
         <style>
+            /* all css here */
             body {
 
                 margin: 0;
@@ -16,6 +17,14 @@
                 background-color: rgb(100, 200, 255);
             }
             
+            main {
+                padding: 20px;
+            }
+
+            h1, h2, h3, h4, h5, h6 {
+                font-weight: 300;
+                colo: rgb(50,50, 250)
+            }
 
             /* means any unordered list inside the nav, will have this style to it*/
             nav ul {
@@ -85,6 +94,9 @@
         <main>
 
         </main>
+            <h1>Responsive example</h1>
+            <p>This is a simple example of a responsive navigation bar using HTML and CSS. Resize the browser window to see how the navigation bar adapts to different screen sizes.</p>
+            
         <footer>
 
         </footer>
