add them to week3

--- a/week3/index.html
+++ b/week3/index.html
@@ -13,6 +13,7 @@
         <header>
             <button id="colorButton">Change Color</button>
             <button id="imageToggle">Toggle Image</button>
+            <img src="images/qThumb.jpg" alt="trigger images" id="triggerImage">
         </header>
         <!-- id's are 1-1 relationships, not like clases-->
         <main id="colorStage">
