--- a/week10/index.html
+++ b/week10/index.html
@@ -83,7 +83,7 @@
   <main>
     <h1>Orbiting Moon & Noise-Driven Comet</h1>
     <p>
-      This sketch explores layered motion in a small solar system: a moon orbiting a planet with
+      This sketch explores layered motion in a small solar system: a moon and three other planets orbiting a sun with
       trigonometric motion, and a comet that appears at time intervals and follows an organic,
       noise-bent path. The goal was to combine repeated motion, time-based events, and randomness
       to create a de-synchronized, futuristic rhythm.
