--- a/week10/index.html
+++ b/week10/index.html
@@ -186,6 +186,19 @@
       </figcaption>
     </figure>
 
+    <!-- Iteration 8 -->
+    <figure>
+     
+      <figcaption>
+        <div class="iteration-title">Iteration 8 – Adding the Sun and More Planets</div>
+        <small>Refining the system</small><br>
+        At this stage, I turned the central body into a sun with a glowing halo and added more planets
+        orbiting around it. Each planet reuses the same trigonometric logic as the original moon, but
+        with different radii, colors, and velocities. This created a more dynamic solar system where
+        each orbit has its own rhythm.
+       </figcaption>
+    </figure>
+
   </main>
 </body>
 </html>
