add them add to week 13

--- a/week13/index.html
+++ b/week13/index.html
@@ -286,6 +286,7 @@
       Unfortunately, I did not capture screenshots from every intermediate stage of development.
       This is something I would improve in future projects by documenting more consistently.
     </p>
+     <img src="images/img5.png" alt="Teachable Machine training classes screenshot" style="width:100%; border-radius:10px;">
   </section>
 
   <!-- CHALLENGES -->
@@ -303,6 +304,7 @@
       Randomly placed shapes sometimes appeared partially outside the canvas, breaking the
       composition. This highlighted the importance of spatial constraints in generative systems.
     </p>
+     <img src="images/img6.png" alt="Teachable Machine training classes screenshot" style="width:100%; border-radius:10px;">
   </section>
 
   <!-- ROLE IN LIFE -->
@@ -327,6 +329,7 @@
       <li>Further refine pencil behavior to feel even more intentional and rhythmic.</li>
       <li>Improve gesture stability with multi-frame confirmation.</li>
       <li>Add clearer onboarding text for first-time users.</li>
+       <img src="images/img8.png" alt="Teachable Machine training classes screenshot" style="width:100%; border-radius:10px;">
     </ul>
   </section>
 
