add them all to week13

--- a/week13/index.html
+++ b/week13/index.html
@@ -132,10 +132,83 @@
 </header>
 
 <main>
+<!-- HOW TO USE UPDATED VERSION-->
+  <section>
+    <h2>How to use (version 2.0 -- Hand-guided placement)</h2>
+
+    <ol>
+      <li>Show <strong>Paper</strong> to the camera to activate the canvas.</li>
+      <li>Choose a drawing input:
+        <strong>Circle</strong> generates circles,
+        <strong>Square</strong> generates squares,
+        <strong>Pencil</strong> draws black lines,
+        <strong>Palm</strong> (left or right) generates triangles.
+      </li>
+      <li>Control placement through spatial positioning:
+          showing an object or gesture on the <strong>left or right side</strong> of the camera view
+          draws the shape on the corresponding side of the canvas.
+     </li>
+
+    <li>Use your <strong>index fingertip</strong> to further refine <em>where</em> marks appear,
+        allowing more intentional composition and spatial control.
+    </li>
+
+      <li>Show a <strong>Fist</strong> to toggle brush thickness (thin ↔️ thick).</li>
+      <li>Show <strong>Paper</strong> again to reset the canvas.</li>
+    </ol>
+
+    <p class="muted">
+      The system relies on webcam classification confidence. Small fluctuations in recognition
+      are part of the interaction.
+    </p>
+  </section>
+
+  <!-- LIVE PROTOTYPE -->
+  <section>
+    <h2>Live prototype</h2>
+
+    <p>
+      Allow camera access when prompted. Best experienced on desktop (Chrome).
+    </p>
+
+    <div class="sketchWrap">
+      <iframe
+        src="https://editor.p5js.org/nbarnoon/full/O0hY_poXw"
+        allow="camera; microphone"
+        allowfullscreen>
+      </iframe>
+    </div>
+
+    <p class="muted">
+      If the embed does not load, open it directly:
+      <a href="https://editor.p5js.org/nbarnoon/full/zXbXMtPms" target="_blank" rel="noopener">
+        p5.js full sketch
+      </a>
+    </p>
+
+    <video
+      controls
+      preload="metadata"
+      style="width:100%; border-radius:14px; border:1px solid #e6e0d3; margin-top:12px;"
+    >
+      <source src="recording/recording.mp4" type="video/mp4">
+  </section>
+
+  <section>
+    <h2>Version 2.0: Sample ArtWorks :)</h2>
+
+
+    <figure>
+      <img src="images/updated-img1.png" alt="Teachable Machine training classes screenshot" style="width:100%; border-radius:10px;">
+      <img src="images/updated-img2.png" alt="Teachable Machine training classes screenshot" style="width:100%; border-radius:10px;">
+    </figure>
+  </section>
+
+
 
   <!-- HOW TO USE -->
   <section>
-    <h2>How to use</h2>
+    <h2>How to use - verion 1.0</h2>
 
     <ol>
       <li>Show <strong>Paper</strong> to the camera to activate the canvas.</li>
@@ -194,7 +267,7 @@
     style="width:100%; border-radius:14px; border:1px solid #e6e0d3; margin-top:12px;"
   >
     <source src="recording/screenrecording.mp4" type="video/mp4">
-    Your browser does not support the video tag.
+    
   </video>
 
   <p class="muted">
